--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -20,6 +20,14 @@ h2
     font-size: 1.8rem;
 }
 
+hr
+{
+    border-style: none;
+    border-top: 2px dotted lightgray;
+    border-width: 10px;
+    width: 10%;
+}
+
 h3
 {
     color: #11999E;
@@ -50,14 +58,44 @@ img
 {
     position: relative;
     left: 0px;
+    top: 20px;
 }
 
 
 .skill-row
 {
     text-align: left;
-    margin: 80px auto 80px auto;
+    margin: 60px auto 60px auto;
     width: 50%;
+}
+
+.btn 
+{
+    background: #11cdd4;
+    background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
+    background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
+    background-image: -ms-linear-gradient(top, #11cdd4, #11999e);
+    background-image: -o-linear-gradient(top, #11cdd4, #11999e);
+    background-image: linear-gradient(to bottom, #11cdd4, #11999e);
+    -webkit-border-radius: 8;
+    -moz-border-radius: 8;
+    border-radius: 8px;
+    font-family: Arial;
+    color: #ffffff;
+    font-size: 20px;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+}
+  
+.btn:hover 
+{
+    background: #30e3cb;
+    background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: -ms-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
+    text-decoration: none;
 }
 
 .codeskillimg
@@ -95,9 +133,30 @@ img
 .bottom-container
 {
     width: 100%;
-    position: absolute;
-    top: 90;
+    height: 100px;
     background-color: #66BFBF;
+}
+
+.bottom-container p 
+{
+    position: relative;
+    top: 20px;
+    color: white;
+}
+
+.bottom-container a
+{
+    position: relative;
+    top: 20px;
+    color: #11999E;
+    margin-right: 20px;
+    text-decoration: none;
+}
+
+.footer-link
+{
+    margin-top: 20px;
+    margin-top: 20px;
 }
 
 .contact-me
